Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8858

o_lcookie is not swabbed properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 1.8.x (1.8.0 - 1.8.5), Lustre 2.1.6
    • None
    • 3
    • 9223372036854775807

      We hit a problem when using Sparc Client vs x86_64 Lustre server(Server is 2.1.6)

      Call Trace:
      [<ffffffff886ed601>] libcfs_debug_dumpstack+0x51/0x60 [libcfs]
      [<ffffffff886edb08>] lbug_with_loc+0x48/0x90 [libcfs]
      [<ffffffff89032f87>] filter_cancel_cookies_cb+0x1e7/0x5a0 [obdfilter]
      [<ffffffff88e2b7c7>] fsfilt_ldiskfs_cb_func+0x17/0x160 [fsfilt_ldiskfs]
      [<ffffffff88d46b00>] jbd2_journal_commit_transaction+0xbb8/0x1120 [jbd2]
      [<ffffffff8003dddd>] lock_timer_base+0x1b/0x3c
      [<ffffffff88d4a2c3>] kjournald2+0x9a/0x1ec [jbd2]
      [<ffffffff800a3cdf>] autoremove_wake_function+0x0/0x2e
      [<ffffffff88d4a229>] kjournald2+0x0/0x1ec [jbd2]
      [<ffffffff800a3ac7>] keventd_create_kthread+0x0/0xc4
      [<ffffffff80032c4f>] kthread+0xfe/0x132
      [<ffffffff8005dfc1>] child_rip+0xa/0x11
      [<ffffffff800a3ac7>] keventd_create_kthread+0x0/0xc4
      [<ffffffff80032b51>] kthread+0x0/0x132
      [<ffffffff8005dfb7>] child_rip+0x0/0x11

      Kernel panic - not syncing: LBUG

      But we could mount x86_64 client using same Lustre version, problems seems come to
      o_lcookie is not swabbed properly so that it caused problems. and we applied fix, Sparc
      client could mount Server without problems.

      I still could not see where master branch fix the problem, so i think latest master branch
      aslo have this problem.

            wc-triage WC Triage
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: