LU-8858 ptlrpc: swab o_lcookie propely

o_lcookie is not swapped, which will casue problem upon
Sparc Client vs x86_64 server.

Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: Idca02af8f4dc7c625957deb129080ea75c0647ea